# gvk

./: .gitignore  CMakeLists.txt  INTERNAL-VERSION.txt  README.md  RELEASE-NOTES.md  imgui.ini
cmake/: SPIRV-Cross.cmake  SPIRV-Headers.cmake  SPIRV-Tools.cmake  VulkanMemoryAllocator.cmake  asio.cmake  glfw.cmake  glm.cmake  glslang.cmake  googletest.cmake  gvk-target.config.cmake.in  gvk.build.cmake  gvk.config.cmake.in  imgui.cmake  stb.cmake  tinyxml2.cmake
cmake/gvk/: command-structures.cmake  cppgen.cmake  format-info.cmake  gui.cmake  handles.cmake  layer.cmake  math.cmake  reference.cmake  restore-info.cmake  restore-point.cmake  runtime.cmake  spirv.cmake  state-tracker.cmake  string.cmake  structures.cmake  system.cmake  virtual-swapchain.cmake  xml.cmake
gvk-command-structures/: CMakeLists.txt
gvk-cppgen/: CMakeLists.txt
gvk-cppgen/include/gvk-cppgen/: api-element-collection-info.hpp
gvk-cppgen/source/gvk-cppgen/: api-element-collection-declaration-generator.cpp  basic-handle-generator.cpp
gvk-format-info/: CMakeLists.txt
gvk-format-info/include/: gvk-format-info.hpp
gvk-format-info/source/: gvk-format-info.cpp
gvk-gui/: CMakeLists.txt
gvk-gui/include/gvk-gui/: renderer.hpp
gvk-gui/source/gvk-gui/: renderer.cpp
gvk-handles/: CMakeLists.txt
gvk-handles/generator/: handles.generator.hpp
gvk-handles/include/: gvk-handles.hpp
gvk-handles/include/gvk-handles/: context.hpp  defines.hpp  handles.hpp  mesh.hpp  render-target.hpp  utilities.hpp  wsi-context.hpp
gvk-handles/include/gvk-handles/detail/: handle-utilities.hpp
gvk-handles/source/gvk-handles/: context.cpp  mesh.cpp  render-target.cpp  utilities.cpp  wsi-context.cpp
gvk-handles/source/gvk-handles/detail/: handle-utilities.cpp
gvk-handles/tests/: render-target.tests.cpp
gvk-layer/: CMakeLists.txt
gvk-layer/include/: gvk-layer.hpp
gvk-layer/include/gvk-layer/: log.hpp  registry.hpp
gvk-layer/source/gvk-layer/: log.cpp  registry.cpp
gvk-math/: CMakeLists.txt
gvk-math/include/gvk-math/: defines.hpp
gvk-math/include/gvk/math/: camera.hpp
gvk-math/source/gvk/math/: camera.cpp
gvk-reference/: CMakeLists.txt
gvk-reference/include/: gvk-reference.hpp
gvk-reference/include/gvk-reference/: handle-id.hpp  reference.hpp
gvk-restore-info/: CMakeLists.txt
gvk-restore-info/generator/: main.cpp
gvk-restore-info/source/gvk-restore-info/detail/: to-string-manual.cpp
gvk-restore-point/: CMakeLists.txt
gvk-restore-point/generator/: applier-process-command-buffer.generator.hpp  basic-applier.generator.hpp  basic-creator.generator.hpp  basic-layer.generator.hpp  creator-process-command-buffer.generator.hpp  update-structure-handles.generator.hpp
gvk-restore-point/include/: VK_LAYER_INTEL_gvk_restore_point.h  VK_LAYER_INTEL_gvk_restore_point.hpp
gvk-restore-point/include/gvk-restore-point/: applier.hpp  copy-engine.hpp  creator.hpp  layer.hpp  object-map.hpp  restore-point.hpp  utilities.hpp
gvk-restore-point/source/gvk-restore-point/: applier.cpp  copy-engine.cpp  creator.cpp  layer.cpp  object-map.cpp
gvk-restore-point/source/gvk-restore-point/handles/: acceleration-structure.cpp  buffer.cpp  command-buffer.cpp  descriptor-set.cpp  device-memory.cpp  device.cpp  event.cpp  fence.cpp  image.cpp  instance.cpp  physical-device.cpp  pipeline.cpp  queue.cpp  semaphore.cpp  shader.cpp  surface.cpp  swapchain.cpp
gvk-runtime/: CMakeLists.txt  gvk-windows-layer-registry.ps1
gvk-runtime/include/: gvk-defines.hpp
gvk-runtime/source/: gvk-defines.cpp  gvk-environment.cpp  gvk-runtime.cpp
gvk-runtime/tests/: result-scope-callback.tests.cpp
gvk-spirv/: CMakeLists.txt
gvk-spirv/include/gvk-spirv/: context.hpp
gvk-spirv/source/gvk-spirv/: context.cpp
gvk-spirv/tests/: context.tests.cpp  raytracing.tests.cpp  spirv-test-utilities.hpp
gvk-state-tracker/: CMakeLists.txt
gvk-state-tracker/generator/: basic-state-tracker.generator.hpp  state-tracked-handles.generator.hpp
gvk-state-tracker/include/: VK_LAYER_INTEL_gvk_state_tracker.h
gvk-state-tracker/include/gvk-state-tracker/: cmd-tracker.hpp  state-tracker.hpp
gvk-state-tracker/source/gvk-state-tracker/: buffer.cpp  cmd-tracker.cpp  command-buffer.cpp  descriptor-set.cpp  device-memory.cpp  image.cpp  pipeline.cpp  queue.cpp  state-tracker.cpp  swapchain.cpp
gvk-state-tracker/tests/: command-buffer.tests.cpp  descriptor-set.tests.cpp  device-memory-binding.tests.cpp  image-layout.tests.cpp  pipeline.tests.cpp  state-tracker-test-utilities.cpp  state-tracker-test-utilities.hpp  swapchain.tests.cpp
gvk-string/: CMakeLists.txt
gvk-string/include/gvk-string/: printer.hpp  utilities.hpp
gvk-string/source/gvk-string/: utilities.cpp
gvk-string/tests/: utilities.tests.cpp
gvk-structures/: CMakeLists.txt
gvk-structures/generator/: main.cpp  pnext-to-string.generator.hpp
gvk-structures/include/gvk-structures/: convert.hpp  defaults.hpp
gvk-structures/include/gvk-structures/detail/: cerealization-manual.hpp  cerealization-utilities.hpp  make-tuple-manual.hpp
gvk-structures/source/gvk-structures/: defaults.cpp
gvk-structures/source/gvk-structures/detail/: cerealization-utilities.cpp  copy-manual.cpp  handle-enumeration-manual.cpp  to-string-manual.cpp
gvk-system/: CMakeLists.txt
gvk-system/include/gvk-system/: surface.hpp
gvk-system/source/gvk-system/: surface.cpp
gvk-virtual-swapchain/: CMakeLists.txt
gvk-virtual-swapchain/include/gvk-virtual-swapchain/: layer.hpp
gvk-virtual-swapchain/source/gvk-virtual-swapchain/: layer.cpp
gvk-xml/: CMakeLists.txt  gvk-xml-to-json.cpp
gvk-xml/include/gvk/xml/: defines.hpp
gvk-xml/source/gvk-xml/: manifest.cpp  parameter.cpp
gvk/generator/: main.cpp
gvk/source/gvk/: spir-v.cpp
samples/: CMakeLists.txt  gvk-getting-started-00-triangle.cpp  gvk-getting-started-01-mesh.cpp  gvk-getting-started-02-uniform-buffer.cpp  gvk-getting-started-03-texture-mapping.cpp  gvk-getting-started-04-render-target.cpp  gvk-getting-started-05-gui.cpp  gvk-log-parser.cpp  gvk-sample-entry-points.hpp  gvk-sample-utilities.hpp  gvk-xml-comparison.cpp
(+1 files in other folders)
